[project]
name = "storage-project"
version = "0.1.0"
description = "Interactive CLI tool for managing Ceph RBD storage, filesystem mounts, and Docker"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "termcolor (>=3.1.0,<4.0.0)",
    "inquirer (>=3.4.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "helper"}]

[project.scripts]
storage-helper = "helper.helper:storage_helper"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
